--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <!-- تحميل jsPDF-AutoTable -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.3/jspdf.plugin.autotable.min.js"></script>
+    <!-- تحميل خط Amiri من CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/amiri-font@1.0.0/fonts/Amiri-Regular.ttf" type="font/ttf" id="amiri-font"></script>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <style>
@@ -789,7 +791,7 @@
                     console.error('خطأ: زر downloadPdfBtn غير موجود');
                     throw new Error('فشل في إنشاء زر تحميل PDF');
                 }
-                downloadBtn.addEventListener('click', () => {
+                downloadBtn.addEventListener('click', async () => {
                     try {
                         console.log('بدء إنشاء ملف PDF');
                         if (!window.jspdf || !window.jspdf.jsPDF) {
@@ -798,28 +800,45 @@
                         const { jsPDF } = window.jspdf;
                         const doc = new jsPDF({ orientation: 'portrait', unit: 'mm', format: 'a4' });
 
-                        // تحميل خط عربي (Tajawal) لدعم النصوص العربية بشكل صحيح
-                        doc.addFileToVFS('Tajawal-Regular.ttf', 'data:font/ttf;base64,...'); // يجب إضافة ملف الخط الفعلي هنا (Base64)
-                        doc.addFont('Tajawal-Regular.ttf', 'Tajawal', 'normal');
-                        doc.setFont('Tajawal', 'normal');
-                        console.log('تم تعيين خط Tajawal لدعم النصوص العربية');
+                        // جلب ملف خط Amiri من CDN وتحويله إلى Base64
+                        let fontLoaded = false;
+                        try {
+                            const fontUrl = 'https://cdn.jsdelivr.net/npm/amiri-font@1.0.0/fonts/Amiri-Regular.ttf';
+                            const response = await fetch(fontUrl, { mode: 'cors' });
+                            if (!response.ok) {
+                                throw new Error(`فشل جلب ملف الخط: ${response.statusText}`);
+                            }
+                            const fontArrayBuffer = await response.arrayBuffer();
+                            const fontBase64 = btoa(
+                                new Uint8Array(fontArrayBuffer)
+                                    .reduce((data, byte) => data + String.fromCharCode(byte), '')
+                            );
+                            doc.addFileToVFS('Amiri-Regular.ttf', `data:font/ttf;base64,${fontBase64}`);
+                            doc.addFont('Amiri-Regular.ttf', 'Amiri', 'normal');
+                            doc.setFont('Amiri', 'normal');
+                            fontLoaded = true;
+                            console.log('تم تعيين خط Amiri لدعم النصوص العربية');
+                        } catch (fontError) {
+                            console.warn('تحذير: فشل تحميل خط Amiri، يتم استخدام Arial كبديل:', fontError);
+                            doc.setFont('Arial', 'normal'); // استخدام Arial كبديل إذا فشل تحميل Amiri
+                        }
+
                         doc.setFontSize(12);
                         doc.setTextColor(40, 40, 40);
 
                         // إعدادات الهوامش والتخطيط
-                        const pageWidth = 210; // عرض صفحة A4 بالملم
-                        const margin = 15; // هامش الصفحة
+                        const pageWidth = 210;
+                        const margin = 15;
                         const contentWidth = pageWidth - 2 * margin;
                         let yOffset = margin;
-                        const pageHeight = 297 - margin; // ارتفاع صفحة A4 مطروحًا منه الهامش السفلي
-                        const lineHeight = 8; // ارتفاع السطر
+                        const pageHeight = 297 - margin;
+                        const lineHeight = 8;
 
                         // دالة لإضافة صفحة جديدة مع رأسية
                         const addNewPage = () => {
                             doc.addPage();
                             yOffset = margin;
-                            // إضافة رأسية الصفحة
-                            doc.setFillColor(92, 64, 51); // لون الرأسية (primary: #5C4033)
+                            doc.setFillColor(92, 64, 51);
                             doc.rect(0, 0, pageWidth, 20, 'F');
                             doc.setFontSize(16);
                             doc.setTextColor(255, 255, 255);
@@ -845,7 +864,7 @@
                         };
 
                         // العنوان الرئيسي
-                        doc.setFillColor(232, 185, 35); // لون الخلفية (accent: #E8B923)
+                        doc.setFillColor(232, 185, 35);
                         doc.rect(0, 0, pageWidth, 30, 'F');
                         doc.setFontSize(18);
                         doc.setTextColor(255, 255, 255);
@@ -861,8 +880,8 @@
                         doc.setFontSize(12);
                         yOffset += 5;
                         doc.setLineWidth(0.5);
-                        doc.setDrawColor(92, 64, 51); // لون الخط (primary: #5C4033)
-                        doc.line(margin, yOffset, margin + contentWidth, yOffset); // خط فاصل
+                        doc.setDrawColor(92, 64, 51);
+                        doc.line(margin, yOffset, margin + contentWidth, yOffset);
                         yOffset += 5;
                         (pdfData.companyInfo?.fields || []).forEach(field => {
                             renderArabicText(`${field.label || 'غير محدد'}: ${field.value || ''}`, margin + contentWidth, yOffset, { maxWidth: contentWidth });
@@ -964,14 +983,14 @@
                             startY: yOffset,
                             margin: { left: margin, right: margin },
                             styles: {
-                                font: 'Tajawal',
+                                font: fontLoaded ? 'Amiri' : 'Arial',
                                 fontSize: 10,
                                 textColor: [40, 40, 40],
                                 cellPadding: 3,
                                 halign: 'right'
                             },
                             headStyles: {
-                                fillColor: [92, 64, 51], // لون الرأسية (primary: #5C4033)
+                                fillColor: [92, 64, 51],
                                 textColor: [255, 255, 255],
                                 fontSize: 11
                             },
